# TyperAssistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: bump_minor.yml  release.yml
examples/: example_1.py  example_2.py  example_3.py
src/typerassistant/: __init__.py  assistant.py  spec.py  typer.py
tests/: conftest.py  test_bootstrap.py  test_example_1.py  test_examples.py
