[tool.poetry]
name = "typerassistant"
version = "0.2.3"
description = "Automatically generate an OpenAI Assistant interface for any python typer CLI."
authors = ["Erich Blume <blume.erich@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { "include" = "typerassistant", "from" = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"  # I think case/match is the limiting factor here, so this could be pushed back
typer = {extras = ["all"], version = "^0.9.0"}
openai = "^1.3.2"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.6"
ipdb = "^0.13.13"

[tool.ruff]
line-length = 120
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
